--- a/index 2.html
+++ b/index 2.html
@@ -8,9 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="css/bootstrap-grid.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
 	 
-		 <link rel="stylesheet" href="css/stylesheet.css">
+	 <link rel="stylesheet" href="css/stylesheet.css">
 	 
  </head>
   
@@ -28,16 +28,19 @@
   </li>
 </ul>   
 	
-	
 <main>
     
 <div class="header">
-  <h1 class="display-4">2020 TOUR</h1>
+  <h1 class="display-4">Tour 2020</h1>
 	</div>  
-
-	<img src="images/justinbieber2.jpg" class="img-fluid" alt="Responsive image">
+<br>
+	<img src="images/justinbieber2.jpg" class="img-fluid" alt="Responsive image" width="1000">
+<br>
 	
-<h2 class="lead"> Justin has just released his tour for the Changes album</h2>
+<h2> Justin has just released his tour for the Changes album</h2>
+	
+<br>
+<br>
 	
 	<div class="container">
   <div class="row">
@@ -56,40 +59,16 @@
 	 <h4> Golden1 center</h4>
 	 <h4> May 19</h4>
     </div>
-	   <div class="col-sm">
-      <h3> Santa Clara,CA,USA</h3>
-	  <h4> Levi's stadium</h4>
-	  <h4>May 22</h4>
-	  </div>
-	  <div class="row">
-	  <div class="col-sm">
-      <h3> Glendale,AZ,USA</h3>
-	  <h4> Gila River Arena</h4>
-	  <h4>May 24</h4>
-	  </div>
-	   <div class="col-sm">
-     <h3> San Diego, CA, USA</h3>
-	 <h4> Pechanga Arena San Diego</h4>
-	 <h4> May 26</h4>
-    </div>
-	  <div class="row">
-	  <div class="col-sm">
-      <h3> Pasenda,CA,USA</h3>
-	  <h4> Rose Bowl Stadium</h4>
-	  <h4>May 29</h4>
-	  </div>
-	 <div class="row">
-	  <div class="col-sm">
-      <h3> Las Vegas,NV,USA</h3>
-	  <h4> T-mobile arena</h4>
-	  <h4>June 2</h4>
-	  </div>
+	  
+	  
 		 
   </div>
 </div>
+
 	
    </main>
-    
+<br>  
+<br>
    <footer> 
 <p class="lead"> All rights are reserved by SB Projects </p>
 	 </footer>
@@ -98,8 +77,8 @@
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js (is included in bootstrap bundle), then Bootstrap JS -->
     <script src="js/jquery.js"></script>
-    <script src="js/bootstrap.bundle.js"></script>
-  </p>
+    <script src="js/bootstrap.bundle.min.js"></script>
 	</div>
   </body>
 </html>
+
