updated grid structure with making the size adaptable
adjusted grid structure

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 	
 <div class="container">
   <div class="row">
-    <div class="col">
+    <div class="col-md-6">
       <h4>Justin Bieber has just released his newest ablum called "changes" The album hit the number 1 position of most streamed albums after it's release.</h4>
     </div>
-    <div class="col">
+    <div class="col-md-6">
       <h4>Good news for you, Justin Bieber is heading on tour this year, go to our tour page to learn more.</h4>
     </div>
   </div>
