--- a/index 2.html
+++ b/index 2.html
@@ -44,17 +44,17 @@
 	
 	<div class="container">
   <div class="row">
-    <div class="col-sm">
+    <div class="col-md-6">
       <h3> Seattle,WA,USA</h3>
 	  <h4>Centurylink field</h4>
 	  <h4>May 14</h4>
     </div>
-    <div class="col-sm">
+    <div class="col-md-6">
       <h3> Portland,OR,USA</h3>
 	  <h4>Moda center</h4>
 	  <h4> May 17</h4>
     </div>
-    <div class="col-sm">
+    <div class="col-md-6">
      <h3> Sacramento,CA,USA</h3>
 	 <h4> Golden1 center</h4>
 	 <h4> May 19</h4>
