different divs and grid structure
addded images and adjusted grid structure

--- a/index.html
+++ b/index.html
@@ -38,13 +38,22 @@
 	
 <div class="container">
   <div class="row">
-    <div class="col-md-6">
+    <div class="col-lg-3">
       <h4>Justin Bieber has just released his newest ablum called "changes" The album hit the number 1 position of most streamed albums after it's release.</h4>
     </div>
-    <div class="col-md-6">
+    <div class="col-lg-3">
       <h4>Good news for you, Justin Bieber is heading on tour this year, go to our tour page to learn more.</h4>
     </div>
+	  <div class="col-lg-3">
+		  <img src="images/justinbieber3.jpg" class="img-fluid" alt="Responsive image">
+	  </div>
+	  <div class="col-lg-3">
+		  <img src="images/justinbieber4.jpg" class="img-fluid" alt="Responsive image">
+	  </div>
   </div>
+	
+	
+
 	<br>
 	<img src="images/justin bieber.jpg" class="img-fluid" alt="Responsive image">
 	
@@ -57,10 +66,11 @@
 	 </footer>
     
     
-    <!-- Optional JavaScript -->
+	</div>
+ 
+	 <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js (is included in bootstrap bundle), then Bootstrap JS -->
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
-	</div>
   </body>
 </html>
