--- a/index.html
+++ b/index.html
@@ -29,25 +29,25 @@
 </ul>   
 	
 <main>
-    
+  <header>  
 <div class="header">
   <h1 class="display-4">Jusin Bieber Home page</h1>
 	</div>  
-	
+	</header> 
 <br>
 	
 <div class="container">
   <div class="row">
-    <div class="col-lg-3">
+    <div class="col-sm-6 col-md-4 col-lg-3">
       <h4>Justin Bieber has just released his newest ablum called "changes" The album hit the number 1 position of most streamed albums after it's release.</h4>
     </div>
-    <div class="col-lg-3">
+    <div class="col-sm-6 col-md-4 col-lg-3">
       <h4>Good news for you, Justin Bieber is heading on tour this year, go to our tour page to learn more.</h4>
     </div>
-	  <div class="col-lg-3">
+	  <div class="col-sm-6 col-md-4 col-lg-3">
 		  <img src="images/justinbieber3.jpg" class="img-fluid" alt="Responsive image">
 	  </div>
-	  <div class="col-lg-3">
+	  <div class="col-sm-6 col-md-4 col-lg-3">
 		  <img src="images/justinbieber4.jpg" class="img-fluid" alt="Responsive image">
 	  </div>
   </div>
